testdata/type_errors/undefined_variable.dws
// Test: Undefined variable error
var x: Integer := 5;
var y: Integer := x + z;  // z is undefined
PrintLn(y);
